RESOLVED FIXED120768
class WeekInputType invokes wrong constructor
https://bugs.webkit.org/show_bug.cgi?id=120768
Summary class WeekInputType invokes wrong constructor
Santosh Mahto
Reported 2013-09-05 05:58:05 PDT
WeekInputType is derived from BaseChooserOnlyDateAndTimeInputType not from BaseWeekInputType
Attachments
Patch (1.43 KB, patch)
2013-09-05 06:09 PDT, Santosh Mahto
no flags
Santosh Mahto
Comment 1 2013-09-05 06:09:53 PDT
WebKit Commit Bot
Comment 2 2013-09-12 02:55:09 PDT
Comment on attachment 210605 [details] Patch Clearing flags on attachment: 210605 Committed r155602: <http://trac.webkit.org/changeset/155602>
WebKit Commit Bot
Comment 3 2013-09-12 02:55:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.