class WeekInputType invokes wrong constructor https://bugs.webkit.org/show_bug.cgi?id=120768

Patch by Santosh Mahto <santosh.ma@samsung.com> on 2013-09-12
Reviewed by Andreas Kling.

Correcting wrong constuctor invocation.

* html/WeekInputType.h:
(WebCore::WeekInputType::WeekInputType):

Canonical link: https://commits.webkit.org/139160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155602 268f45cc-cd09-0410-ab3c-d52691b4dbfc