Source/WebCore/html/WeekInputType.h
@@ -41,7 +41,7 @@ public:
     static PassOwnPtr<InputType> create(HTMLInputElement*);
 
 private:
-    explicit WeekInputType(HTMLInputElement* element) : BaseWeekInputType(element) { }
+    explicit WeekInputType(HTMLInputElement* element) : BaseChooserOnlyDateAndTimeInputType(element) { }
     virtual void attach() OVERRIDE;
     virtual const AtomicString& formControlType() const OVERRIDE;
     virtual DateComponents::Type dateType() const OVERRIDE;
